--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
 	"name": "tooltip-helper",
 	"version": "1.0.3",
-	"description": "Creates tooltip for the desired html element",
+	"description": "A JavaScript package for adding a tooltip to any HTML element.",
 	"main": "script.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [
-		"tooltip"
+		"tooltip",
+		"helper",
+		"javascript",
+		"ui"
 	],
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/swarnim-me/tooltip-helper"
+	},
 	"author": "Swarnim Shresth <swarnim9716+npm@gmail.com>",
-	"license": "ISC"
+	"license": "MIT"
 }
